--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,15 +5,18 @@
         "ecmaVersion": 6,
         "sourceType": "module"
     },
-    "plugins": [
-        "@typescript-eslint"
+    "extends": [
+      "plugin:@typescript-eslint/recommended", // Uses the recommended rules from the @typescript-eslint/eslint-plugin
+      "prettier/@typescript-eslint", // Uses eslint-config-prettier to disable ESLint rules from @typescript-eslint/eslint-plugin that would conflict with prettier
+      "plugin:prettier/recommended" // Enables eslint-plugin-prettier and eslint-config-prettier. This will display prettier errors as ESLint errors. Make sure this is always the last configuration in the extends array.
     ],
     "rules": {
-        "@typescript-eslint/class-name-casing": "warn",
-        "@typescript-eslint/semi": "warn",
-        "curly": "warn",
-        "eqeqeq": "warn",
-        "no-throw-literal": "warn",
-        "semi": "off"
+        // "@typescript-eslint/class-name-casing": "warn",
+        // "@typescript-eslint/semi": "warn",
+        // "curly": "warn",
+        // "eqeqeq": "warn",
+        // "no-throw-literal": "warn",
+        // "semi": "off"
     }
+    
 }
