--- a/package.json
+++ b/package.json
@@ -41,20 +41,21 @@
     "eslint-plugin-prettier": "^3.1.3",
     "glob": "^7.1.6",
     "husky": "^4.2.5",
+    "lint-staged": "^10.1.7",
     "mocha": "^7.1.1",
     "prettier": "^2.0.4",
     "typescript": "^3.8.3",
     "vscode-test": "^1.3.0"
   },
-  "lint-staged": {
-    "*.{js,ts,json}": [
-      "eslint --fix",
-      "git add"
-    ]
-  },
   "husky": {
     "hooks": {
-      "pre-commit": "tsc --noEmit && lint-staged"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "eslint --cache --fix",
+      "git add"
+    ]
   }
 }
