--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
   },
   "lint-staged": {
     "*.{js,ts}": [
-      "eslint --cache --fix",
-      "git add"
+      "eslint --cache --fix"
     ]
   }
 }
