--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "compile": "tsc -p ./",
     "lint": "eslint '*/**/*.{js,ts}' --fix",
     "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
+    "pretest": "npm run compile",
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
