--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,14 +18,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Install Node.js
         uses: actions/setup-node@v1
         with:
           node-version: 8.x
-      - name: Get npm cache directory
+
+      - name: Get npm env
         id: npm-cache
         run: |
           echo "::set-output name=dir::$(npm config get cache)"
+          echo "::set-output name=vscode_version::$(npm run get-vscode-version --silent)"
+
       - name: Cache npm
         uses: actions/cache@v1
         with:
@@ -33,7 +37,16 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
+
       - run: npm install
+
+      - name: Cache vscode-test
+        id: cache-vscode-test
+        uses: actions/cache@v1
+        with:
+          path: .vscode-test
+          key: ${{ runner.os }}-vscode-test-${{ steps.npm-cache.outputs.vscode_version }}
+
       - name: Run tests
         uses: GabrielBB/xvfb-action@v1.0
         with:
