--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "lint": "eslint '*/**/*.{js,ts}' --fix",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "get-vscode-version": "echo $npm_package_engines_vscode"
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
