--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "Jump to Tests",
   "description": "Switch between the code and the test file",
   "version": "0.0.1",
+  "publisher": "schmas",
   "engines": {
     "vscode": "^1.44.0"
   },
@@ -14,7 +15,6 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:jump-to-tests.jump",
     "onCommand:jump-to-tests.jump2"
   ],
   "main": "./out/main/extension.js",
@@ -31,31 +31,21 @@
     },
     "commands": [
       {
-        "command": "jump-to-tests.jump",
-        "title": "Jump to Tests: Jump"
-      },
-      {
         "command": "jump-to-tests.jump2",
         "title": "Jump to Tests: Jump2"
       }
     ],
     "keybindings": [
       {
-        "command": "jump-to-tests.jump",
+        "command": "jump-to-tests.jump2",
         "key": "ctrl+shift+t",
         "mac": "cmd+shift+t",
-        "when": "editorTextFocus"
-      },
-      {
-        "command": "jump-to-tests.jump2",
-        "key": "ctrl+shift+y",
-        "mac": "cmd+shift+y",
         "when": "editorTextFocus"
       }
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
+    "vscode:prepublish": "npm run lint && npm run compile",
     "compile": "tsc -p ./",
     "lint": "eslint '*/**/*.{js,ts}' --fix",
     "watch": "tsc -watch -p ./",
