--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "rootDir": "src",
     "strict": true /* enable all strict type-checking options */
   },
-  "exclude": ["node_modules", ".vscode-test"]
+  "exclude": ["node_modules", ".vscode-test", "src/test/testWorkspace"]
 }
