--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile",
     "test": "node ./out/test/runTest.js",
-    "get-vscode-version": "echo $npm_package_engines_vscode"
+    "get-vscode-version": "echo $npm_package_engines_vscode",
+    "deploy": "vsce publish patch"
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
@@ -84,6 +85,7 @@
     "mocha": "^7.1.1",
     "prettier": "^2.0.4",
     "typescript": "^3.8.3",
+    "vsce": "^1.75.0",
     "vscode-test": "^1.3.0"
   },
   "husky": {
