added gitflow github action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,13 @@
 name: build
 
-on:
-  push:
-    branches:
-    - master
-  pull_request:
-    branches:
-    - master
-    - develop
+on: repository_dispatch
+  # push:
+  #   branches:
+  #   - master
+  # pull_request:
+  #   branches:
+  #   - master
+  #   - develop
 
 jobs:
   build:
