--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,10 @@
 [*]
 charset=utf-8
 end_of_line=lf
-insert_final_newline=false
+insert_final_newline=true
 indent_style=space
 indent_size=2
-
-[{*.gson,*.gradle,*.groovy,*.gdsl,*.gy,*.gant}]
-indent_size=2
-
-[{*.yaml,*.yml}]
-indent_size=2
+trim_trailing_whitespace = true
 
 [*.md]
 max_line_length = off
@@ -19,6 +14,6 @@ trim_trailing_whitespace = false
 end_of_line=crlf
 indent_style = tab
 
-[*.{js,ts}]
-trim_trailing_whitespace = false
+[*.{js,ts,jsx,tsx}]
+trim_trailing_whitespace = true
 max_line_length = 120
