--- a/package.json
+++ b/package.json
@@ -65,11 +65,16 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile",
     "test": "node ./out/test/runTest.js",
+    "prune-branches": "git remote prune origin",
+    "clean": "git clean -fdX",
     "get-vscode-version": "echo $npm_package_engines_vscode",
+    "get-project-name": "echo $npm_package_name",
     "package": "vsce package",
 		"deploy": "vsce publish -p",
-		"prune-branches": "git remote prune origin",
-		"clean": "git clean -fdX"
+    "changelog": "auto-changelog -p --unreleased --commit-limit false",
+    "changelog-release": "auto-changelog -p -u --commit-limit false --template .changelog-github-template.hbs --unreleased --stdout",
+    "changelog-debug": "auto-changelog -p --template json --output changelog-data.json",
+    "version": "auto-changelog -p --unreleased --commit-limit false && git add CHANGELOG.md"
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
@@ -79,6 +84,7 @@
     "@types/vscode": "^1.44.0",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
+    "auto-changelog": "^2.0.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.3",
@@ -104,5 +110,13 @@
   },
   "dependencies": {
     "lodash": "^4.17.15"
+  },
+  "auto-changelog": {
+    "commitLimit": false,
+    "unreleased": true,
+    "template": ".changelog-template.hbs",
+    "includeBranch": [
+      "master"
+    ]
   }
 }
