fix: correct pat argument at npm deploy

--- a/.github/workflows/build_release_publish.yml
+++ b/.github/workflows/build_release_publish.yml
@@ -112,7 +112,7 @@ jobs:
 
       - name: publish to vscode marketplace
         if: github.ref == 'refs/heads/master'
-        run: npm run deploy ${{ env.VSCODE_MARKETPLACE_TOKEN }}
+        run: npm run deploy -- ${{ env.VSCODE_MARKETPLACE_TOKEN }}
 
       - name: git push
         id: git-push
